--- a/src/css/tabs/setup.css
+++ b/src/css/tabs/setup.css
@@ -20,31 +20,12 @@
 
 #accel_calib_running, #mag_calib_running {
     display: none;
-    width: 99%;
-    height: 99%;
-    position: relative;
-    margin: 0 0 0 0;
-    float: left;
-    text-align: center;
-    background-color: #fff;
-    border-radius: 2px;
-    border: 1px solid var(--darkAccent);
-    color: var(--darkAccent);
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 25px;
-    transition: all ease 0.2s;
-    text-decoration:none;
 }
 
 .tab-setup .danger-note {
     line-height: 22px;
     font-size: 14px;
     padding: 10px 10px 10px 10px;
-}
-
-.tab-setup .gui_warning {
-    background: #f1f1f1;
 }
 
 .tab-setup .danger {
